--- a/.github/workflows/quality-and-test.yml
+++ b/.github/workflows/quality-and-test.yml
@@ -51,12 +51,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
         if [ "${{ matrix.backend }}" = "all" ]; then
           pip install -e .[numpy,jax,torch]
         else
           pip install -e .[${{ matrix.backend }}]
         fi
-        pip install -e .[dev]
     
     - name: Run tests
       run: |
