add gaussian sampler and gbm

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,14 @@ addopts =
     --cov-branch
     --cov-report=term-missing:skip-covered
     --cov-fail-under=50
+filterwarnings =
+    ignore::urllib3.exceptions.NotOpenSSLWarning
 markers =
     slow: marks tests as slow
     gpu: marks tests that require GPU
+    unit: Unit tests
+    integration: Integration tests
+    backend: Backend-specific tests
+    numpy: NumPy backend tests
+    jax: JAX backend tests
+    torch: PyTorch backend tests
