--- a/pytest.ini
+++ b/pytest.ini
@@ -11,7 +11,8 @@ addopts =
     --cov-report=term-missing:skip-covered
     --cov-fail-under=50
 filterwarnings =
-    ignore::urllib3.exceptions.NotOpenSSLWarning
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
 markers =
     slow: marks tests as slow
     gpu: marks tests that require GPU
