--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,10 @@ ignore = [
     "ARG002", # unused method argument
 ]
 
+[tool.ruff.lint.per-file-ignores]
+"laakhay/quantlab/pricing/**" = ["N803", "N806"]
+"tests/**" = ["B017"]
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
